--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Baltazar Hertel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="style.css" rel="stylesheet" media="screen">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
-    <h1>Hello, Balthazar!</h1>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <div class="logo">Balthazar Hertel</div>
+        </div>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span4 offset2">
+
+        <iframe src="http://player.vimeo.com/video/52660967?badge=0" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span4 offset2">
+      <address>
+        <strong>Sprocket Inc</strong><br>
+        Vestbanevej 6<br>
+        Valby<br>
+        <abbr title="Phone">P:</abbr> (123) 456-7890
+      </address>
+    </div>
+  </div>
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
