--- a/web/index.html
+++ b/web/index.html
@@ -16,22 +16,87 @@
       </div>
     </div>
     <div class="row-fluid">
-      <div class="span4 offset2">
-
-        <iframe src="http://player.vimeo.com/video/52660967?badge=0" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      <div class="span8 offset2">
+        <div id="myCarousel" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+            <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="active item">
+              <iframe src="http://player.vimeo.com/video/52660967?badge=0" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
+            <div class="item">
+              <iframe src="http://player.vimeo.com/video/66903521" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
+            <div class="item">
+              <iframe src="http://player.vimeo.com/video/67077975" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
+          </div>
+          <!-- Carousel nav -->
+          <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+          <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+        </div>
+        <address>
+          <strong>Sprocket Inc</strong><br>
+          Vestbanevej 8<br>
+          Valby<br>
+        </address>
       </div>
-  </div>
-  <div class="row-fluid">
-    <div class="span4 offset2">
-      <address>
-        <strong>Sprocket Inc</strong><br>
-        Vestbanevej 6<br>
-        Valby<br>
-        <abbr title="Phone">P:</abbr> (123) 456-7890
-      </address>
     </div>
-  </div>
-  <script src="http://code.jquery.com/jquery.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span2">
+          <!--Sidebar content-->
+        </div>
+        <div class="span8">
+          <ul class="thumbnails">
+            <li class="span4">
+              <a href="#" class="thumbnail">
+                <img src="http://placehold.it/300x150" />
+                <p class="text-center lead">&nbsp;</p>
+              </a>
+            </li>
+            <li class="span4">
+              <a href="#" class="thumbnail">
+                <img src="http://placehold.it/300x150" />
+                <p class="text-center lead">forklaring</p>
+              </a>
+            </li>
+            <li class="span4">
+              <a href="#" class="thumbnail">
+                <img src="http://placehold.it/300x150" />
+                <p class="text-center lead">&nbsp;</p>
+              </a>
+            </li>
+          </ul>
+          <div class="row-fluid">
+            <div class="span4 well">
+              <img src="http://placehold.it/200x150" />
+            </div>
+            <div class="span4 well">
+              <img src="http://placehold.it/200x150" />
+            </div>
+            <div class="span4 well">
+              <img src="http://placehold.it/200x150" />
+            </div>
+          </div>
+          <div class="row-fluid">
+            <div class="span4 well">
+              <img src="http://placehold.it/200x150" />
+            </div>
+            <div class="span4 well">
+              <img src="http://placehold.it/200x150" />
+            </div>
+            <div class="span4 well">
+              <img src="http://placehold.it/200x150" />
+            </div>
+          </div>
+      </div>
+    </div>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
