--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
             <!-- Carousel items -->
           <div class="carousel-inner">
             <div class="active item">
-              <iframe src="http://player.vimeo.com/video/52660967?badge=0" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+              <iframe src="http://player.vimeo.com/video/67062426" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
             <div class="item">
               <iframe src="http://player.vimeo.com/video/66903521" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
