--- a/web/index.html
+++ b/web/index.html
@@ -1,100 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Baltazar Hertel</title>
+    <title>Balthazar Hertel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" media="screen">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    <link href="style.css" rel="stylesheet" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <div class="logo">Balthazar Hertel</div>
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <div id="movie3" hidden>
+            <iframe src="http://player.vimeo.com/video/67062426" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
+          <div id="movie2">
+            <iframe src="http://player.vimeo.com/video/68564079" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
+          <div id="movie3" hidden>
+            <iframe src="http://player.vimeo.com/video/68115302" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
+          <img class="logo" src="Balthazar_navn.gif" />
         </div>
       </div>
-    </div>
-    <div class="row-fluid">
-      <div class="span8 offset2">
-        <div id="myCarousel" class="carousel slide">
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-          </ol>
-            <!-- Carousel items -->
-          <div class="carousel-inner">
-            <div class="active item">
-              <iframe src="http://player.vimeo.com/video/67062426" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
-            <div class="item">
-              <iframe src="http://player.vimeo.com/video/66903521" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
-            <div class="item">
-              <iframe src="http://player.vimeo.com/video/67077975" width="1000" height="562" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
+      <div class="row">
+        <div class="span4">
+          <div class="moviethumb">
+            <a href="#"><img src="Escort.jpg" class="img-polaroid" /></a>
+            <p>ESCORT · AFGANGSFILM</p>
           </div>
-          <!-- Carousel nav -->
-          <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-          <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
         </div>
-        <address>
-          <strong>Sprocket Inc</strong><br>
-          Vestbanevej 8<br>
-          Valby<br>
-        </address>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span2">
-          <!--Sidebar content-->
+        <div class="span4">
+          <div class="moviethumb">
+            <a href="#"><img src="mOOnbird.jpg" class="img-polaroid" /></a>
+            <p>m00n BIRD</p>
+          </div>
         </div>
-        <div class="span8">
-          <ul class="thumbnails">
-            <li class="span4">
-              <a href="#" class="thumbnail">
-                <img src="http://placehold.it/300x150" />
-                <p class="text-center lead">&nbsp;</p>
-              </a>
-            </li>
-            <li class="span4">
-              <a href="#" class="thumbnail">
-                <img src="http://placehold.it/300x150" />
-                <p class="text-center lead">forklaring</p>
-              </a>
-            </li>
-            <li class="span4">
-              <a href="#" class="thumbnail">
-                <img src="http://placehold.it/300x150" />
-                <p class="text-center lead">&nbsp;</p>
-              </a>
-            </li>
-          </ul>
-          <div class="row-fluid">
-            <div class="span4 well">
-              <img src="http://placehold.it/200x150" />
-            </div>
-            <div class="span4 well">
-              <img src="http://placehold.it/200x150" />
-            </div>
-            <div class="span4 well">
-              <img src="http://placehold.it/200x150" />
-            </div>
+        <div class="span4">
+          <div class="moviethumb">
+            <a href="#"><img src="Sne.jpg" class="img-polaroid" /></a>
+            <p>SNE · AFGANGSFILM</p>
           </div>
-          <div class="row-fluid">
-            <div class="span4 well">
-              <img src="http://placehold.it/200x150" />
-            </div>
-            <div class="span4 well">
-              <img src="http://placehold.it/200x150" />
-            </div>
-            <div class="span4 well">
-              <img src="http://placehold.it/200x150" />
-            </div>
-          </div>
+        </div>
       </div>
+      <div class="row">
+        <div class="span4">
+          <div class="moviethumb">
+            <a href="#"><img src="Tabita.jpg" class="img-polaroid" /></a>
+            <p>TABITA · LANGFILM</p>
+          </div>
+        </div>
+        <div class="span4">
+          <div class="moviethumb">
+            <a href="#"><img src="TagStilling.jpg" class="img-polaroid" /></a>
+            <p>TAG STILLING · AFGANGSFILM</p>
+          </div>
+        </div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
