--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <title>Balthazar Hertel</title>
+    <meta name="description" content="Filmfotograf">
+    <meta name="keywords" content="Filmfotograf, Fotograf, Film, Den Danske Filmskole">
+    <meta name="author" content="Balthazar Hertel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
     <link href="style.css" rel="stylesheet" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+    <!-- Made by Daniel Kokott, http://daniel.kokott.dk / daniel@kokott.dk -->
   </head>
   <body>
     <div class="container">
@@ -33,7 +37,7 @@
         <div class="span4">
           <div class="movie">
             <a href="#" class="moviethumb" onclick="showmovie('#movie1');"><img src="Escort.jpg" /></a>
-            <p onclick="showmovie('#movie1')">ESCORT · AFGANGSFILM</p>
+            <p>ESCORT · AFGANGSFILM</p>
           </div>
         </div>
         <div class="span4">
