--- a/web/index.html
+++ b/web/index.html
@@ -34,36 +34,36 @@
         </div>
       </div>
       <div class="row">
-        <div class="span4">
+        <div class="span3">
           <div class="movie">
-            <a href="#" class="moviethumb" onclick="showmovie('#movie1');"><img src="Escort.jpg" /></a>
-            <p>ESCORT · AFGANGSFILM</p>
+            <a class="moviethumb" show="#movie1"><img src="Escort.jpg" /></a>
+            <div class="movielabel"><p>ESCORT · AFGANGSFILM</p></div>
           </div>
         </div>
-        <div class="span4">
+        <div class="span3">
           <div class="movie">
-            <a href="#" class="moviethumb" onclick="showmovie('#movie2');"><img src="TagStilling.jpg" /></a>
-            <p>TAG STILLING · AFGANGSFILM</p>
+            <a class="moviethumb" show="#movie2"><img src="TagStilling.jpg" /></a>
+            <div class="movielabel"><p>TAG STILLING · AFGANGSFILM</p></div>
           </div>
         </div>
-        <div class="span4">
+        <div class="span3">
           <div class="movie">
-            <a href="#" class="moviethumb" onclick="showmovie('#movie3');"><img src="Sne.jpg" /></a>
-            <p>SNE · AFGANGSFILM</p>
+            <a class="moviethumb" show="#movie3"><img src="Sne.jpg" /></a>
+            <div class="movielabel"><p>SNE · AFGANGSFILM</p></div>
+          </div>
+        </div>
+        <div class="span3">
+          <div class="movie">
+            <img src="Tabita.jpg" class="moviethumb" />
+            <div class="movielabel"><p>TABITA · LANGFILM</p></div>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="span4">
-          <div class="movie">
-            <img src="Tabita.jpg" class="moviethumb" />
-            <p>TABITA · LANGFILM</p>
-          </div>
-        </div>
-        <div class="span4">
+        <div class="span3">
           <div class="movie">
             <img src="mOOnbird.jpg" class="moviethumb" />
-            <p>m00n BIRD</p>
+            <div class="movielabel"><p>m00n BIRD</p></div>
           </div>
         </div>
     </div>
