--- a/web/index.html
+++ b/web/index.html
@@ -16,39 +16,26 @@
     <div class="container">
       <div class="row">
         <div class="span12">
-          <div style="height:422px;">
-            <div id="movie1" class="movieplayer">
-              <!-- Escort -->
-              <iframe src="http://player.vimeo.com/video/67062426" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
-            <div id="movie2" class="movieplayer" style="display: none;">
-              <!-- Tag Stilling -->
-              <iframe src="http://player.vimeo.com/video/68564079" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
-            <div id="movie3" class="movieplayer" style="display: none;">
-              <!-- Sne -->
-              <iframe src="http://player.vimeo.com/video/68115302" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
-          </div>
+          <iframe id="movieplayer" src="http://player.vimeo.com/video/67062426" width="100%" height="700" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           <img class="logo" src="Balthazar_navn.gif" />
         </div>
       </div>
       <div class="row">
         <div class="span3">
           <div class="movie">
-            <a class="moviethumb" show="#movie1"><img src="Escort.jpg" /></a>
+            <a class="moviethumb" play="http://player.vimeo.com/video/67062426"><img src="Escort.jpg" /></a>
             <div class="movielabel"><p>ESCORT · AFGANGSFILM</p></div>
           </div>
         </div>
         <div class="span3">
           <div class="movie">
-            <a class="moviethumb" show="#movie2"><img src="TagStilling.jpg" /></a>
+            <a class="moviethumb" play="http://player.vimeo.com/video/68564079"><img src="TagStilling.jpg" /></a>
             <div class="movielabel"><p>TAG STILLING · AFGANGSFILM</p></div>
           </div>
         </div>
         <div class="span3">
           <div class="movie">
-            <a class="moviethumb" show="#movie3"><img src="Sne.jpg" /></a>
+            <a class="moviethumb" play="http://player.vimeo.com/video/68115302"><img src="Sne.jpg" /></a>
             <div class="movielabel"><p>SNE · AFGANGSFILM</p></div>
           </div>
         </div>
