--- a/web/index.html
+++ b/web/index.html
@@ -19,44 +19,45 @@
       <div class="row">
         <div class="span12">
           <img class="logo" src="Balthazar_navn.gif" />
-<!--           <table>
+          <div id="movieplayer" style="display:none;">
+            <a id="movieplay_close" class="close" href="#">&times;</a>
+            <iframe src="" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
+          <table class="movies">
             <tr>
               <td>
-                <div class="movie">
-                  <a data-play="http://player.vimeo.com/video/67062426" href="#movieplayer_modal" data-toggle="modal"><div class="moviethumb" data-src="Escort.jpg"></div></a>
+                <a class="movie" data-play="http://player.vimeo.com/video/67062426">
+                  <img class="moviethumb" src="Escort.jpg" data-hover="Escort_hover.jpg" />
+                </a>
+              </td>
+              <td>
+                <div class="movie" data-play="http://player.vimeo.com/video/68564079">
+                  <img class="moviethumb" src="TagStilling.jpg" data-hover="TagStilling_hover.jpg" />
                 </div>
               </td>
               <td>
-                <div class="movie">
-                  <a data-play="http://player.vimeo.com/video/68564079" href="#movieplayer_modal" data-toggle="modal"><div class="moviethumb" data-src="TagStilling.jpg"></div></a>
+                <div class="movie" data-play="http://player.vimeo.com/video/68115302">
+                  <img class="moviethumb" src="Sne.jpg" data-hover="Sne_hover.jpg" />
                 </div>
               </td>
               <td>
-                <div class="movie">
-                  <a data-play="http://player.vimeo.com/video/68115302" href="#movieplayer_modal" data-toggle="modal"><div class="moviethumb" data-src="Sne.jpg"></div></a>
-                </div>
-              </td>
-              <td>
-                <div class="movie">
-                  <a data-play="http://player.vimeo.com/video/69150324" href="#movieplayer_modal" data-toggle="modal"><div class="moviethumb" data-src="Tabita.jpg"></div></a>
+                <div class="movie" data-play="http://player.vimeo.com/video/69150324">
+                  <img class="moviethumb" src="Tabita.jpg" data-hover="Tabita_hover.jpg" />
                 </div>
               </td>
             </tr>
             <tr>
               <td>
-                <div class="movie">
-                  <a data-play="http://player.vimeo.com/video/68816773" href="#movieplayer_modal" data-toggle="modal"><div class="moviethumb" data-src="mOOnbird.jpg"></div></a>
+                <div class="movie" data-play="http://player.vimeo.com/video/68816773">
+                  <img class="moviethumb" src="mOOnbird.jpg" data-hover="mOOnbird_hover.jpg" />
                 </div>
               </td>
             </tr>
-          </table> -->
+          </table>
           <img src="CreditsCV.gif" />
           <img src="Top_adresse.gif" />
         </div>
       </div>
-    </div>
-    <div id="movieplayer_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <iframe id="movieplayer" src="http://player.vimeo.com/video/67062426" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
