Nye film. Fjernet adresse.

--- a/web/index.html
+++ b/web/index.html
@@ -52,10 +52,20 @@
                   <img class="moviethumb" src="mOOnbird.jpg" data-hover="mOOnbird_hover.jpg" />
                 </div>
               </td>
+              <td>
+                <div class="movie" data-play="http://player.vimeo.com/video/74717033">
+                  <img class="moviethumb" src="TAMV.jpg" data-hover="TAMV.jpg" />
+                </div>
+              </td>
+              <td>
+                <div class="movie" data-play="http://player.vimeo.com/video/73302141">
+                  <img class="moviethumb" src="Trold.jpg" data-hover="Trold.jpg" />
+                </div>
+              </td>             
             </tr>
           </table>
           <img src="CreditsCV.gif" />
-          <img src="Top_adresse.gif" />
+          <!-- <img src="Top_adresse.gif" /> -->
         </div>
       </div>
     </div>
