Tilrettet hover effect
Hover effect med CSS3
Nyt trold thumb.

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
     <link href="style.css" rel="stylesheet" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400|Muli' rel='stylesheet' type='text/css'>
     <!-- Made by Daniel Kokott, http://daniel.kokott.dk / daniel@kokott.dk -->
   </head>
   <body>
@@ -26,40 +26,68 @@
           <table class="movies">
             <tr>
               <td>
-                <a class="movie" data-play="http://player.vimeo.com/video/67062426">
-                  <img class="moviethumb" src="Escort.jpg" data-hover="Escort_hover.jpg" />
-                </a>
+                <div class="movie" data-play="http://player.vimeo.com/video/67062426">
+                  <img class="moviethumb" src="Escort.jpg" />
+                  <div class="movielabel">
+                    <h1>AFGANGSFILM</h1>
+                    <p>ESCORT</p>
+                  </div>
+                </div>
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/68564079">
-                  <img class="moviethumb" src="TagStilling.jpg" data-hover="TagStilling_hover.jpg" />
+                  <img class="moviethumb" src="TagStilling.jpg" />
+                  <div class="movielabel">
+                    <h1>REKLAMEFILM</h1>
+                    <p>TAG STILLING</p>
+                  </div>
                 </div>
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/68115302">
-                  <img class="moviethumb" src="Sne.jpg" data-hover="Sne_hover.jpg" />
+                  <img class="moviethumb" src="Sne.jpg" />
+                  <div class="movielabel">
+                    <h1>AFGANGSDOKUMENTAR</h1>
+                    <p>SNE</p>
+                  </div>
                 </div>
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/69150324">
-                  <img class="moviethumb" src="Tabita.jpg" data-hover="Tabita_hover.jpg" />
+                  <img class="moviethumb" src="Tabita.jpg" />
+                  <div class="movielabel">
+                    <h1>AFGANGSFILM</h1>
+                    <p>TABITA</p>
+                  </div>
                 </div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/68816773">
-                  <img class="moviethumb" src="mOOnbird.jpg" data-hover="mOOnbird_hover.jpg" />
+                  <img class="moviethumb" src="mOOnbird.jpg" />
+                  <div class="movielabel">
+                    <h1>MUSIKVIDEO</h1>
+                    <p>M00NBIRD</p>
+                  </div>
                 </div>
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/74717033">
-                  <img class="moviethumb" src="TAMV.jpg" data-hover="TAMV.jpg" />
+                  <img class="moviethumb" src="TAMV.jpg" />
+                  <div class="movielabel">
+                    <h1>SUPER16</h1>
+                    <p>TIL ALLE MINE VENNER</p>
+                  </div>
                 </div>
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/73302141">
-                  <img class="moviethumb" src="Trold.jpg" data-hover="Trold.jpg" />
+                  <img class="moviethumb" src="Trold2.jpg" />
+                  <div class="movielabel">
+                    <h1>KORTFILM</h1>
+                    <p>TROLD</p>
+                  </div>
                 </div>
               </td>             
             </tr>
