--- a/web/index.html
+++ b/web/index.html
@@ -68,7 +68,7 @@
                   <img class="moviethumb" src="mOOnbird.jpg" />
                   <div class="movielabel">
                     <h1>MUSIKVIDEO</h1>
-                    <p>M00NBIRD</p>
+                    <p>mOOnbird</p>
                   </div>
                 </div>
               </td>
@@ -83,7 +83,7 @@
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/73302141">
-                  <img class="moviethumb" src="Trold2.jpg" />
+                  <img class="moviethumb" src="Trold.jpg" />
                   <div class="movielabel">
                     <h1>KORTFILM</h1>
                     <p>TROLD</p>
