Tester responsive fonts med vw vh

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,8 @@
       <div class="row">
         <div class="span12">
           <img class="logo" src="Balthazar_navn.gif" />
-          <div id="movieplayer" style="display:none;">
+          <div class="test"><span id="titel">FILMFOTOGRAF</span> BALTHAZAR HERTEL</div>
+          <div id="movieplayer">
             <a id="movieplay_close" class="close" href="#">&times;</a>
             <iframe src="" width="100%" height="422" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           </div>
