--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="qyH6ri3k2wFir_B_B6aK_V1JZ7Av_mafv44pfYtoQzk" />
     <meta name="google-site-verification" content="YX5jEi0KiR9vGg-V1AgxtpWtYNHOjER-Mlh1EyDO-nQ" />
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-    <link href="style.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/balthazarhertel.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400|Muli' rel='stylesheet' type='text/css'>
     <!-- Made by Daniel Kokott, http://daniel.kokott.dk / daniel@kokott.dk -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-45798050-1', 'balthazarhertel.com');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="span12">
-          <img class="logo" src="Balthazar_navn.gif" />
+          <img class="logo img-responsive" src="img/Balthazar_navn.gif" />
           <div class="test"><span id="titel">FILMFOTOGRAF</span> BALTHAZAR HERTEL</div>
           <div id="movieplayer">
             <a id="movieplay_close" class="close" href="#">&times;</a>
@@ -28,7 +36,7 @@
             <tr>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/67062426">
-                  <img class="moviethumb" src="Escort.jpg" />
+                  <img class="moviethumb img-responsive" src="img/Escort.jpg" />
                   <div class="movielabel">
                     <h1>AFGANGSFILM</h1>
                     <p>ESCORT</p>
@@ -37,7 +45,7 @@
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/68564079">
-                  <img class="moviethumb" src="TagStilling.jpg" />
+                  <img class="moviethumb img-responsive" src="img/TagStilling.jpg" />
                   <div class="movielabel">
                     <h1>REKLAMEFILM</h1>
                     <p>TAG STILLING</p>
@@ -46,7 +54,7 @@
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/68115302">
-                  <img class="moviethumb" src="Sne.jpg" />
+                  <img class="moviethumb img-responsive" src="img/Sne.jpg" />
                   <div class="movielabel">
                     <h1>AFGANGSDOKUMENTAR</h1>
                     <p>SNE</p>
@@ -55,7 +63,7 @@
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/69150324">
-                  <img class="moviethumb" src="Tabita.jpg" />
+                  <img class="moviethumb img-responsive" src="img/Tabita.jpg" />
                   <div class="movielabel">
                     <h1>AFGANGSFILM</h1>
                     <p>TABITA</p>
@@ -66,7 +74,7 @@
             <tr>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/68816773">
-                  <img class="moviethumb" src="mOOnbird.jpg" />
+                  <img class="moviethumb img-responsive" src="img/mOOnbird.jpg" />
                   <div class="movielabel">
                     <h1>MUSIKVIDEO</h1>
                     <p>mOOnbird</p>
@@ -75,7 +83,7 @@
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/74717033">
-                  <img class="moviethumb" src="TAMV.jpg" />
+                  <img class="moviethumb img-responsive" src="img/TAMV.jpg" />
                   <div class="movielabel">
                     <h1>SUPER16</h1>
                     <p>TIL ALLE MINE VENNER</p>
@@ -84,7 +92,7 @@
               </td>
               <td>
                 <div class="movie" data-play="http://player.vimeo.com/video/73302141">
-                  <img class="moviethumb" src="Trold.jpg" />
+                  <img class="moviethumb img-responsive" src="img/Trold.jpg" />
                   <div class="movielabel">
                     <h1>KORTFILM</h1>
                     <p>TROLD</p>
@@ -93,13 +101,28 @@
               </td>             
             </tr>
           </table>
-          <img src="CreditsCV.gif" />
-          <!-- <img src="Top_adresse.gif" /> -->
+          <img class="img-responsive" src="img/CreditsCV.gif" />
+          <!-- <img src="img/Top_adresse.gif" /> -->
         </div>
       </div>
     </div>
+    <div id="info" class="" itemscope itemtype="http://schema.org/Person">
+      <div><span itemprop="jobTitle">Filmfotograf</span> <span itemprop="name">Balthazar Hertel</span></div>
+      <div>
+        <span itemprop="description">Filmfotograf, Fotograf, Film og Instrukt&oslash;r. Uddannet hos Den Danske Filmskole 2013.</span>
+      </div>
+      <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+        <span itemprop="streetAddress"></span>
+        <span itemprop="postalCode">2500</span>    
+        <span itemprop="addressLocality">Valby</span>,
+        <span itemprop="addressRegion">Stork&oslash;benhavn</span>
+      </div>
+      Telefon: <span itemprop="telephone">(+45) 51 90 84 64</span>
+      Email: <a href="mailto:mail@balthazarhertel.com" itemprop="email">mail@balthazarhertel.com</a>
+      Web:<a href="http://www.balthazarhertel.com" itemprop="url">www.balthazarhertel.com</a>
+    </div>
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="page.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/balthazarhertel.js"></script>
   </body>
 </html>
