--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <title>Balthazar Hertel</title>
-    <meta name="description" content="Filmfotograf">
-    <meta name="keywords" content="Filmfotograf, Fotograf, Film, Den Danske Filmskole">
-    <meta name="author" content="Balthazar Hertel">
+    <meta name="description" content="Filmfotograf" />
+    <meta name="keywords" content="Filmfotograf, Fotograf, Film, Den Danske Filmskole" />
+    <meta name="author" content="Balthazar Hertel" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="qyH6ri3k2wFir_B_B6aK_V1JZ7Av_mafv44pfYtoQzk" />
     <meta name="google-site-verification" content="YX5jEi0KiR9vGg-V1AgxtpWtYNHOjER-Mlh1EyDO-nQ" />
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/balthazarhertel.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400|Muli' rel='stylesheet' type='text/css'>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/balthazarhertel.css" rel="stylesheet" />
+    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400|Muli' rel='stylesheet' type='text/css' />
     <!-- Made by Daniel Kokott, http://daniel.kokott.dk / daniel@kokott.dk -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -108,6 +108,7 @@
     </div>
     <div id="info" class="" itemscope itemtype="http://schema.org/Person">
       <div><span itemprop="jobTitle">Filmfotograf</span> <span itemprop="name">Balthazar Hertel</span></div>
+      <div><span itemprop="taxID">Sprocket CVR 26370671</span></div>
       <div>
         <span itemprop="description">Filmfotograf, Fotograf, Film og Instrukt&oslash;r. Uddannet hos Den Danske Filmskole 2013.</span>
       </div>
