Info med Balthazar

--- a/index.html
+++ b/index.html
@@ -107,20 +107,19 @@
       </div>
     </div>
     <div id="info" class="" itemscope itemtype="http://schema.org/Person">
-      <div><span itemprop="jobTitle">Filmfotograf</span> <span itemprop="name">Balthazar Hertel</span></div>
-      <div><span itemprop="taxID">Sprocket CVR 26370671</span></div>
+      <div itemprop="name">Balthazar Hertel</div>
+      <div itemprop="jobTitle">Filmfotograf Fotograf</div>
       <div>
-        <span itemprop="description">Filmfotograf, Fotograf, Film og Instrukt&oslash;r. Uddannet hos Den Danske Filmskole 2013.</span>
+        Telefon: <span itemprop="telephone">(+45) 51 90 84 64</span>
+        Email: <a href="mailto:mail@balthazarhertel.com" itemprop="email">mail@balthazarhertel.com</a>
       </div>
       <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
         <span itemprop="streetAddress"></span>
         <span itemprop="postalCode">2500</span>    
         <span itemprop="addressLocality">Valby</span>,
-        <span itemprop="addressRegion">Stork&oslash;benhavn</span>
+        CVR <span itemprop="taxID">26370671</span>
       </div>
-      Telefon: <span itemprop="telephone">(+45) 51 90 84 64</span>
-      Email: <a href="mailto:mail@balthazarhertel.com" itemprop="email">mail@balthazarhertel.com</a>
-      Web:<a href="http://www.balthazarhertel.com" itemprop="url">www.balthazarhertel.com</a>
+      <div class="incognito">Web:<a href="http://www.balthazarhertel.com" itemprop="url">www.balthazarhertel.com</a></div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
